# parliments_migration

./: .gitignore  README.md  pyproject.toml
notebooks/: conflicts.ipynb  conflicts_draft.ipynb  tutorial.ipynb
src/migration-experiments21/parlaments-beyond-borders/: .gitignore  METHODOLOGY.md  README.md  requirements.txt
src/migration-experiments21/parlaments-beyond-borders/notebooks/: 01_fra_2018_pilot.ipynb  02_fra_2017_2022_extended.ipynb  03_grc_tur_ita_gbr_extended.ipynb
src/migration-experiments21/parlaments-beyond-borders/results LUMI/llm_insights/: country_role_frames_pilot.csv  country_role_frames_pilot.md  task1_asymmetry_drivers.csv  task2_extracted_events.csv  task4_cross_target_framings.csv  task4_cross_target_framings.md  task5_direction_framing.csv  task6_policy_convergence.csv  task6_policy_convergence.md
src/migration-experiments21/parlaments-beyond-borders/results LUMI/llm_insights_clean_2026_05_27/: task10_external_target_salience.csv  task10_reciprocal_asymmetry_candidates.csv  (+16 more)
src/migration-experiments21/parlaments-beyond-borders/scripts/: build_comparative_matrix_atlas.py  build_joint_similarity_map.py  generate_all_country_visualizations.py  generate_requested_visualizations.py  llm_prompts.py  run_extended_analysis.py  validate_entities_and_visualizations.py
src/migration-experiments21/parlaments-beyond-borders/src/: agency.py  concreteness.py  config.py  data_model.py  diffusion.py  direction.py  events.py  evidence.py  filters.py  framing.py  geo.py  inspect.py  load.py  typology.py  visualize.py
src/parlianets/: __init__.py
(+14 files in other folders)
