[project]
name = "parlianets"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "dataspider", email = "corinna.coupette@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.9",
    "polars[pandas]>=1.40.1",
]

[project.scripts]
parlianets-test = "parlianets:main"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "jupyterlab>=4.5.7",
]
